fix overflow

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
   /* background: linear-gradient(45deg, #00efd1, #00acea); */
   background-color: #75c9c8;
   color: #f8f9fa;
+  overflow-x: hidden;
 }
 
 section {
